--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script type="module" src="./index.js"></script>
 </head>
 <body>
-<table>
-    <thead>
-        <tr>
-        </tr>
-    </thead>
-    <tbody>
+<table class = "table">
 
-    </tbody>
 </table>
 
 </body>
