--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
 </head>
 <body>
 <table class = "table">
 
 </table>
-
 </body>
 </html>
