--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <script type="module" src="index.js"></script>
 </head>
 <body>
-<table class = "table">
-
+<div></div>
 </table>
 </body>
 </html>
