--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="index.css">
     <script type="module" src="index.js"></script>
 </head>
 <body>
-<div></div>
+<div class="container"></div>
 </table>
 </body>
 </html>
